--- a/chrome/locale/fr/shrunked.dtd
+++ b/chrome/locale/fr/shrunked.dtd
@@ -21,7 +21,7 @@
 <!ENTITY shrunked-resizing.label "Redimensionnement des images…">
 <!ENTITY shrunked-status.label "Statut:">
 <!ENTITY shrunked-progress.label "Progression:">
-<!ENTITY shrunked-minsize.label "Minimum file size to resize:">
-<!ENTITY shrunked-minsize.kilobytes "KB">
-<!ENTITY shrunked-maxsize.label "Maximum size for your photos:">
+<!ENTITY shrunked-minsize.label "Taille minimum pour redimensionner:">
+<!ENTITY shrunked-minsize.kilobytes "Ko">
+<!ENTITY shrunked-maxsize.label "Taille maximum pour vos photos:">
 <!ENTITY shrunked-custom.pixels "px">
