--- a/chrome/locale/tr-TR/shrunked.properties
+++ b/chrome/locale/tr-TR/shrunked.properties
@@ -1,8 +1,8 @@
 disabled=devredışı
 dimensions=%Spx × %Spx
-yes_accesskey=Y
+yes_accesskey=E
 yes_label=Evet
-never_accesskey=e
+never_accesskey=a
 never_label=Bu site için asla
 no_accesskey=H
 no_label=Hayır
