--- a/chrome/locale/zh-CN/shrunked.dtd
+++ b/chrome/locale/zh-CN/shrunked.dtd
@@ -2,9 +2,9 @@
 <!ENTITY shrunked-sites.label "站点设置">
 <!ENTITY shrunked-sites.sitelist.site "站点">
 <!ENTITY shrunked-sites.sitelist.settings "设置">
-<!ENTITY shrunked-sites.forget.label "遗忘选定">
+<!ENTITY shrunked-sites.forget.label "忘记选择">
 <!ENTITY shrunked-defaults.label "默认">
-<!ENTITY shrunked-defaults.quality.label "JPEG 编码器质量：">
+<!ENTITY shrunked-defaults.quality.label "JPEG 编码器质量:">
 <!ENTITY shrunked-defaults.quality.smaller "较小文件">
 <!ENTITY shrunked-defaults.quality.better "较好质量">
 <!ENTITY shrunked-options.title "Shrunked Image Resizer 选项">
