--- a/chrome/locale/zh-CN/shrunked.properties
+++ b/chrome/locale/zh-CN/shrunked.properties
@@ -2,8 +2,8 @@ disabled=已禁用
 dimensions=%Spx × %Spx
 yes_accesskey=Y
 yes_label=是
-never_accesskey=E
-never_label=永不对此站点
+never_accesskey=e
+never_label=从不在此站点
 no_accesskey=N
 no_label=否
 question=调整此图像大小？
