Update locales from BabelZilla

--- a/chrome/locale/it/shrunked.dtd
+++ b/chrome/locale/it/shrunked.dtd
@@ -1,4 +1,4 @@
-<!ENTITY shrunked-config.title "Impostazioni di Shrunked Image Resizer">
+<!ENTITY shrunked-config.title "Impostazioni di Shrunked">
 <!ENTITY shrunked-sites.label "Opzioni dei siti">
 <!ENTITY shrunked-sites.sitelist.site "Sito">
 <!ENTITY shrunked-sites.sitelist.settings "Dimensioni immagine">
@@ -7,14 +7,14 @@
 <!ENTITY shrunked-defaults.quality.label "Qualità JPEG:">
 <!ENTITY shrunked-defaults.quality.smaller "Minima">
 <!ENTITY shrunked-defaults.quality.better "Massima">
-<!ENTITY shrunked-options.title "Ridimensionamento delle immagini di Shrunked Image Resizer">
+<!ENTITY shrunked-options.title "Ridimensionamento delle immagini di Shrunked">
 <!ENTITY shrunked-options.remembersite.label "Ricorda le dimensioni scelte per le immagini di questo sito web">
 <!ENTITY shrunked-options.savedefault.label "Salva come impostazioni predefinite">
 <!ENTITY shrunked-noresize.label "Originarie">
 <!ENTITY shrunked-small.label "500 pixel">
 <!ENTITY shrunked-medium.label "800 pixel">
 <!ENTITY shrunked-large.label "1200 pixel">
-<!ENTITY shrunked-custom.label "Personalizza -">
+<!ENTITY shrunked-custom.label "Personalizzate">
 <!ENTITY shrunked-width.label "Larghezza:">
 <!ENTITY shrunked-height.label "Altezza:">
 <!ENTITY shrunked-waiting.label "Caricamento delle immagini in corso…">
@@ -23,5 +23,5 @@
 <!ENTITY shrunked-progress.label "Avanzamento:">
 <!ENTITY shrunked-minsize.label "Dimensioni minime del file da ridimensionare:">
 <!ENTITY shrunked-minsize.kilobytes "kB">
-<!ENTITY shrunked-maxsize.label "Dimensioni massime delle foto:">
+<!ENTITY shrunked-maxsize.label "Selezionare le dimensioni massime per le immagini:">
 <!ENTITY shrunked-custom.pixels "pixel">
