--- a/chrome/locale/zh-CN/shrunked.dtd
+++ b/chrome/locale/zh-CN/shrunked.dtd
@@ -20,8 +20,8 @@
 <!ENTITY shrunked-waiting.label "正在加载图像…">
 <!ENTITY shrunked-resizing.label "正在缩放图像…">
 <!ENTITY shrunked-status.label "状态：">
-<!ENTITY shrunked-progress.label "进展：">
-<!ENTITY shrunked-minsize.label "调整后的最小文件大小：">
+<!ENTITY shrunked-progress.label "进度：">
+<!ENTITY shrunked-minsize.label "要调整的最小文件大小：">
 <!ENTITY shrunked-minsize.kilobytes "KB">
-<!ENTITY shrunked-maxsize.label "调整后的最大尺寸：">
+<!ENTITY shrunked-maxsize.label "您的图片的最大尺寸：">
 <!ENTITY shrunked-custom.pixels "px">
