--- a/chrome/locale/zh-CN/shrunked.properties
+++ b/chrome/locale/zh-CN/shrunked.properties
@@ -3,7 +3,7 @@ dimensions=%Spx × %Spx
 yes_accesskey=Y
 yes_label=是
 never_accesskey=e
-never_label=从不在此站点
+never_label=永不在此站点
 no_accesskey=N
 no_label=否
-question=调整此图像大小？
+question=要调整此图像的大小吗？
