--- a/chrome/locale/fr/shrunked.dtd
+++ b/chrome/locale/fr/shrunked.dtd
@@ -25,3 +25,8 @@
 <!ENTITY shrunked-minsize.kilobytes "Ko">
 <!ENTITY shrunked-maxsize.label "Taille maximum pour vos photos:">
 <!ENTITY shrunked-custom.pixels "px">
+<!ENTITY shrunked-advanced.label "Advanced">
+<!ENTITY shrunked-advanced.resample.label "Resample images using javascript">
+<!ENTITY shrunked-advanced.exif.label "Transfer EXIF data">
+<!ENTITY shrunked-advanced.orient.label "Automatically rotate images">
+<!ENTITY shrunked-advanced.gps.label "Transfer GPS data">
