--- a/chrome/locale/pl/shrunked.dtd
+++ b/chrome/locale/pl/shrunked.dtd
@@ -9,7 +9,7 @@
 <!ENTITY shrunked-defaults.quality.better "Lepsza jakość">
 <!ENTITY shrunked-options.title "Shrunked Image Resizer - ustawienia">
 <!ENTITY shrunked-options.remembersite.label "Zapamiętaj moją odpowiedź dla tej witryny">
-<!ENTITY shrunked-options.savedefault.label "Zapisz jako domyślne ustawienia">
+<!ENTITY shrunked-options.savedefault.label "Zapisz jako ustawienia domyślne">
 <!ENTITY shrunked-noresize.label "Oryginalny">
 <!ENTITY shrunked-small.label "500px">
 <!ENTITY shrunked-medium.label "800px">
@@ -21,12 +21,12 @@
 <!ENTITY shrunked-resizing.label "Zmiana rozmiaru obrazków…">
 <!ENTITY shrunked-status.label "Status:">
 <!ENTITY shrunked-progress.label "Postęp:">
-<!ENTITY shrunked-minsize.label "Minimum file size to resize:">
+<!ENTITY shrunked-minsize.label "Minimalny rozmiar zmienianego pliku:">
 <!ENTITY shrunked-minsize.kilobytes "KB">
-<!ENTITY shrunked-maxsize.label "Maximum size for your photos:">
+<!ENTITY shrunked-maxsize.label "Minimalny rozmiar zdjęć:">
 <!ENTITY shrunked-custom.pixels "px">
-<!ENTITY shrunked-advanced.label "Advanced">
-<!ENTITY shrunked-advanced.resample.label "Resample images using javascript">
-<!ENTITY shrunked-advanced.exif.label "Transfer EXIF data">
-<!ENTITY shrunked-advanced.orient.label "Automatically rotate images">
-<!ENTITY shrunked-advanced.gps.label "Transfer GPS data">
+<!ENTITY shrunked-advanced.label "Zaawansowane">
+<!ENTITY shrunked-advanced.resample.label "Ponownie próbkuj obrazki, używając JavaScriptu">
+<!ENTITY shrunked-advanced.exif.label "Transferuj dane EXIF">
+<!ENTITY shrunked-advanced.orient.label "Automatycznie obracaj obrazki">
+<!ENTITY shrunked-advanced.gps.label "Transferuj dane GPS">
