--- a/chrome/locale/zh-CN/shrunked.dtd
+++ b/chrome/locale/zh-CN/shrunked.dtd
@@ -4,7 +4,7 @@
 <!ENTITY shrunked-sites.sitelist.settings "设置">
 <!ENTITY shrunked-sites.forget.label "忘记选择">
 <!ENTITY shrunked-defaults.label "默认">
-<!ENTITY shrunked-defaults.quality.label "JPEG 编码器质量:">
+<!ENTITY shrunked-defaults.quality.label "JPEG 编码器质量：">
 <!ENTITY shrunked-defaults.quality.smaller "较小文件">
 <!ENTITY shrunked-defaults.quality.better "较好质量">
 <!ENTITY shrunked-options.title "Shrunked Image Resizer 选项">
@@ -18,15 +18,15 @@
 <!ENTITY shrunked-width.label "宽度：">
 <!ENTITY shrunked-height.label "高度：">
 <!ENTITY shrunked-waiting.label "正在加载图像…">
-<!ENTITY shrunked-resizing.label "正在缩放图像…">
+<!ENTITY shrunked-resizing.label "正在调整图像…">
 <!ENTITY shrunked-status.label "状态：">
 <!ENTITY shrunked-progress.label "进度：">
 <!ENTITY shrunked-minsize.label "要调整的最小文件大小：">
 <!ENTITY shrunked-minsize.kilobytes "KB">
 <!ENTITY shrunked-maxsize.label "您的图片的最大尺寸：">
 <!ENTITY shrunked-custom.pixels "px">
-<!ENTITY shrunked-advanced.label "Advanced">
-<!ENTITY shrunked-advanced.resample.label "Resample images using javascript">
-<!ENTITY shrunked-advanced.exif.label "Transfer EXIF data">
-<!ENTITY shrunked-advanced.orient.label "Automatically rotate images">
-<!ENTITY shrunked-advanced.gps.label "Transfer GPS data">
+<!ENTITY shrunked-advanced.label "高级">
+<!ENTITY shrunked-advanced.resample.label "使用javascript重新取样图片">
+<!ENTITY shrunked-advanced.exif.label "转移 EXIF 数据">
+<!ENTITY shrunked-advanced.orient.label "自动旋转图片">
+<!ENTITY shrunked-advanced.gps.label "转移 GPS 数据">
