--- a/chrome/locale/en-US/shrunked.properties
+++ b/chrome/locale/en-US/shrunked.properties
@@ -7,3 +7,6 @@ never_label=Never for this site
 no_accesskey=N
 no_label=No
 question=Resize this image?
+preview_originalsize = Original dimensions: %Spx × %Spx
+preview_resized = Resized to: %Spx × %Spx
+preview_notresized = Not resized
