--- a/chrome/locale/en-US/shrunked.properties
+++ b/chrome/locale/en-US/shrunked.properties
@@ -6,7 +6,10 @@ never_accesskey=e
 never_label=Never for this site
 no_accesskey=N
 no_label=No
-question=Resize this image?
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+question_pluralform = 1
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+questions = Resize this image?;Resize these images?
 preview_originalsize = Original dimensions: %Spx × %Spx
 preview_resized = Resized to: %Spx × %Spx
 preview_notresized = Not resized
