--- a/chrome/locale/ca-AD/shrunked.properties
+++ b/chrome/locale/ca-AD/shrunked.properties
@@ -6,4 +6,10 @@ never_accesskey=a
 never_label=Mai per a aquesta web
 no_accesskey=N
 no_label=No
-question=Vols canviar la mida d'aquesta imatge?
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+question_pluralform = 1
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+questions = Resize this image?;Resize these images?
+preview_originalsize = Original dimensions: %Spx × %Spx
+preview_resized = Resized to: %Spx × %Spx
+preview_notresized = Not resized
