--- a/chrome/locale/tr/shrunked.properties
+++ b/chrome/locale/tr/shrunked.properties
@@ -6,4 +6,10 @@ never_accesskey=a
 never_label=Bu site için asla
 no_accesskey=H
 no_label=Hayır
-question=Resimi boyutlandırsınmı?
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+question_pluralform = 1
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+questions = Resize this image?;Resize these images?
+preview_originalsize = Original dimensions: %Spx × %Spx
+preview_resized = Resized to: %Spx × %Spx
+preview_notresized = Not resized
