--- a/chrome/locale/de/shrunked.properties
+++ b/chrome/locale/de/shrunked.properties
@@ -6,4 +6,10 @@ never_accesskey=i
 never_label=Nie für diese Seite
 no_accesskey=N
 no_label=Nein
-question=Die Größe dieses Bildes verändern?
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+question_pluralform = 1
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+questions = Resize this image?;Resize these images?
+preview_originalsize = Original dimensions: %Spx × %Spx
+preview_resized = Resized to: %Spx × %Spx
+preview_notresized = Not resized
