--- a/chrome/locale/fr/shrunked.properties
+++ b/chrome/locale/fr/shrunked.properties
@@ -6,4 +6,10 @@ never_accesskey=J
 never_label=Jamais pour ce site
 no_accesskey=N
 no_label=Non
-question=Redimensionner cette image ?
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+question_pluralform = 1
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+questions = Resize this image?;Resize these images?
+preview_originalsize = Original dimensions: %Spx × %Spx
+preview_resized = Resized to: %Spx × %Spx
+preview_notresized = Not resized
