--- a/chrome/locale/pt-BR/shrunked.properties
+++ b/chrome/locale/pt-BR/shrunked.properties
@@ -6,4 +6,10 @@ never_accesskey=u
 never_label=Nunca para este site
 no_accesskey=N
 no_label=Não
-question=Redimensionar esta imagem?
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+question_pluralform = 1
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+questions = Resize this image?;Resize these images?
+preview_originalsize = Original dimensions: %Spx × %Spx
+preview_resized = Resized to: %Spx × %Spx
+preview_notresized = Not resized
