--- a/chrome/locale/zh-CN/shrunked.properties
+++ b/chrome/locale/zh-CN/shrunked.properties
@@ -6,4 +6,10 @@ never_accesskey=e
 never_label=永不在此站点
 no_accesskey=N
 no_label=否
-question=要重新调整此图像的大小吗？
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+question_pluralform = 1
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+questions = Resize this image?;Resize these images?
+preview_originalsize = Original dimensions: %Spx × %Spx
+preview_resized = Resized to: %Spx × %Spx
+preview_notresized = Not resized
