--- a/chrome/locale/sv-SE/shrunked.properties
+++ b/chrome/locale/sv-SE/shrunked.properties
@@ -13,3 +13,7 @@ questions = Resize this image?;Resize these images?
 preview_originalsize = Original dimensions: %Spx × %Spx
 preview_resized = Resized to: %Spx × %Spx
 preview_notresized = Not resized
+
+donate_notification = Shrunked Image Resizer has been updated to version %S. Please consider making a donation.
+donate_button_label = Donate
+donate_button_accesskey = D
