--- a/chrome/locale/it/shrunked.dtd
+++ b/chrome/locale/it/shrunked.dtd
@@ -10,6 +10,7 @@
 <!ENTITY shrunked-options.title "Ridimensionamento delle immagini di Shrunked Image Resizer">
 <!ENTITY shrunked-options.remembersite.label "Ricorda le dimensioni scelte per le immagini di questo sito web">
 <!ENTITY shrunked-options.savedefault.label "Salva come impostazioni predefinite">
+<!ENTITY shrunked-noresize.label "Originarie">
 <!ENTITY shrunked-small.label "500 pixel">
 <!ENTITY shrunked-medium.label "800 pixel">
 <!ENTITY shrunked-large.label "1200 pixel">
