--- a/chrome/locale/it/shrunked.dtd
+++ b/chrome/locale/it/shrunked.dtd
@@ -33,4 +33,5 @@
 <!ENTITY shrunked-advanced.exif.label "Trasferisci i dati EXIF">
 <!ENTITY shrunked-advanced.orient.label "Ruota le immagini automaticamente">
 <!ENTITY shrunked-advanced.gps.label "Trasferisci i dati GPS">
+<!ENTITY shrunked-advanced.logenabled.label "Log messages to Error Console">
 <!ENTITY shrunked-compose.context.label "Resize this image&#x2026;">
