--- a/chrome/locale/pl/shrunked.dtd
+++ b/chrome/locale/pl/shrunked.dtd
@@ -33,4 +33,5 @@
 <!ENTITY shrunked-advanced.exif.label "Transferuj dane EXIF">
 <!ENTITY shrunked-advanced.orient.label "Automatycznie obracaj obrazki">
 <!ENTITY shrunked-advanced.gps.label "Transferuj dane GPS">
+<!ENTITY shrunked-advanced.logenabled.label "Log messages to Error Console">
 <!ENTITY shrunked-compose.context.label "Resize this image&#x2026;">
