--- a/chrome/locale/pt-BR/shrunked.dtd
+++ b/chrome/locale/pt-BR/shrunked.dtd
@@ -33,4 +33,5 @@
 <!ENTITY shrunked-advanced.exif.label "Transferir dados EXIF">
 <!ENTITY shrunked-advanced.orient.label "Girar imagens automaticamente">
 <!ENTITY shrunked-advanced.gps.label "Transferir dados de GPS">
+<!ENTITY shrunked-advanced.logenabled.label "Log messages to Error Console">
 <!ENTITY shrunked-compose.context.label "Resize this image&#x2026;">
