Show message in status bar when resizing attachments

--- a/chrome/locale/pl/shrunked.properties
+++ b/chrome/locale/pl/shrunked.properties
@@ -14,6 +14,8 @@ preview_originalsize = Original dimensions: %Spx × %Spx
 preview_resized = Resized to: %Spx × %Spx
 preview_notresized = Not resized
 
+status_resizing = Zmiana rozmiaru obrazków…
+
 donate_notification = Shrunked Image Resizer has been updated to version %S. Please consider making a donation.
 donate_button_label = Donate
 donate_button_accesskey = D
