--- a/chrome/locale/fr/shrunked.properties
+++ b/chrome/locale/fr/shrunked.properties
@@ -14,7 +14,8 @@ preview_originalsize = Original dimensions: %Spx × %Spx
 preview_resized = Resized to: %Spx × %Spx
 preview_notresized = Not resized
 
-status_resizing = Redimensionnement des images…
+# Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
+status_resizing = Resizing image…;Resizing images…
 
 donate_notification = Shrunked Image Resizer has been updated to version %S. Please consider making a donation.
 donate_button_label = Donate
