--- a/chrome/locale/hr-HR/shrunked.dtd
+++ b/chrome/locale/hr-HR/shrunked.dtd
@@ -10,17 +10,16 @@
 <!ENTITY shrunked-options.title "Shrunked Image Resizer opcije">
 <!ENTITY shrunked-options.remembersite.label "Zapamti moj odgovor za ovu web stranicu">
 <!ENTITY shrunked-options.savedefault.label "Spremi kao zadane postavke">
-<!ENTITY shrunked-noresize.label "Original">
+<!ENTITY shrunked-noresize.label "Izvornik">
 <!ENTITY shrunked-small.label "500px">
 <!ENTITY shrunked-medium.label "800px">
 <!ENTITY shrunked-large.label "1200px">
 <!ENTITY shrunked-custom.label "Prilagođeno">
 <!ENTITY shrunked-width.label "Širina:">
 <!ENTITY shrunked-height.label "Visina:">
-<!ENTITY shrunked-waiting.label "Učitavanje slika…">
-<!ENTITY shrunked-resizing.label "Promjena veličine slike…">
-<!ENTITY shrunked-status.label "Status:">
-<!ENTITY shrunked-progress.label "Napredak:">
+<!ENTITY shrunked-preview.label "Pregled:">
+<!ENTITY shrunked-preview.previous.tooltip "Prethodna slika">
+<!ENTITY shrunked-preview.next.tooltip "Sljedeća slika">
 <!ENTITY shrunked-minsize.label "Minimalna veličina datoteke za promjenu:">
 <!ENTITY shrunked-minsize.kilobytes "KB">
 <!ENTITY shrunked-maxsize.label "Maksimalna veličina za Vaše fotografije:">
@@ -30,3 +29,5 @@
 <!ENTITY shrunked-advanced.exif.label "Prijenos EXIF podataka">
 <!ENTITY shrunked-advanced.orient.label "Automatski rotiraj slike">
 <!ENTITY shrunked-advanced.gps.label "Prijenos GPS podataka">
+<!ENTITY shrunked-advanced.logenabled.label "Zapis obavijesti u konzolu grešaka">
+<!ENTITY shrunked-compose.context.label "Promjena veličine ove slike&#x2026;">
