--- a/chrome/locale/hr/shrunked.properties
+++ b/chrome/locale/hr/shrunked.properties
@@ -9,13 +9,13 @@ no_label = No
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
-questions = Pomjena veličine ove slike?;Pomjena veličineovih  slika??
+questions = Pomjena veličine ove slike?;Pomjena veličineovih slika?
 preview_originalsize = Izvorna veličina: %Spx × %Spx
 preview_resized = Promijeniti na: %Spx × %Spx
 preview_notresized = Nije promijenjeno
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
-status_resizing = Pomjena veličine slike...;Pomjena veličine slika...
+status_resizing = Pomjena veličine slike…;Pomjena veličine slika…
 
 donate_notification = Shrunked Image Resizer je ažuriran na verziju %S. Molimo vas da razmislite o donaciji.
 donate_button_label = Doniraj
