--- a/chrome/locale/it/shrunked.properties
+++ b/chrome/locale/it/shrunked.properties
@@ -17,6 +17,6 @@ preview_notresized = Not resized
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 status_resizing = Resizing image…;Resizing images…
 
-donate_notification = Shrunked Image Resizer has been updated to version %S. Please consider making a donation.
+donate_notification = Shrunked Image Resizer has been updated to version %S. Shrunked is free, but your donation is appreciated!
 donate_button_label = Donate
 donate_button_accesskey = D
