Add new strings to other locales

--- a/locale/ca/shrunked.dtd
+++ b/locale/ca/shrunked.dtd
@@ -30,4 +30,4 @@
 <!ENTITY shrunked-advanced.orient.label "Automatically rotate images">
 <!ENTITY shrunked-advanced.gps.label "Transfer GPS data">
 <!ENTITY shrunked-advanced.logenabled.label "Log messages to Error Console">
-<!ENTITY shrunked-compose.context.label "Resize this image&#x2026;">
+<!ENTITY shrunked-compose.context.label "Resize this image…">
