--- a/locale/nl/shrunked.properties
+++ b/locale/nl/shrunked.properties
@@ -11,7 +11,10 @@ question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Deze afbeelding verkleinen?;Deze afbeeldingen verkleinen?
 preview_originalsize = Originele afmetingen: %Spx x %Spx
+preview_originalfilesize = Original file size: %S
 preview_resized = Verkleind naar: %Spx x %Spx
+preview_resizedfilesize_estimating = Estimating new file size…
+preview_resizedfilesize = Estimated new file size: %S
 preview_notresized = Niet verkleind
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
