--- a/locale/sv-SE/shrunked.properties
+++ b/locale/sv-SE/shrunked.properties
@@ -1,17 +1,20 @@
-disabled=inaktiverat
-dimensions=%S px × %S px
-yes_accesskey=J
-yes_label=Ja
-never_accesskey=d
-never_label=Aldrig för denna webbplats
-no_accesskey=N
-no_label=Nej
+disabled = inaktiverat
+dimensions = %S px × %S px
+yes_accesskey = J
+yes_label = Ja
+never_accesskey = d
+never_label = Aldrig för denna webbplats
+no_accesskey = N
+no_label = Nej
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Resize this image?;Resize these images?
 preview_originalsize = Original dimensions: %Spx × %Spx
+preview_originalfilesize = Original file size: %S
 preview_resized = Resized to: %Spx × %Spx
+preview_resizedfilesize_estimating = Estimating new file size…
+preview_resizedfilesize = Estimated new file size: %S
 preview_notresized = Not resized
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
