--- a/locale/zh-CN/shrunked.properties
+++ b/locale/zh-CN/shrunked.properties
@@ -1,17 +1,20 @@
-disabled=已禁用
-dimensions=%Spx × %Spx
-yes_accesskey=Y
-yes_label=是
-never_accesskey=e
-never_label=永不在此站点
-no_accesskey=N
-no_label=否
+disabled = 已禁用
+dimensions = %Spx × %Spx
+yes_accesskey = Y
+yes_label = 是
+never_accesskey = e
+never_label = 永不在此站点
+no_accesskey = N
+no_label = 否
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Resize this image?;Resize these images?
 preview_originalsize = Original dimensions: %Spx × %Spx
+preview_originalfilesize = Original file size: %S
 preview_resized = Resized to: %Spx × %Spx
+preview_resizedfilesize_estimating = Estimating new file size…
+preview_resizedfilesize = Estimated new file size: %S
 preview_notresized = Not resized
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
