--- a/locale/ca/shrunked.properties
+++ b/locale/ca/shrunked.properties
@@ -1,17 +1,20 @@
-disabled=deshabilitat
-dimensions=%Spx × %Spx
-yes_accesskey=S
-yes_label=Sí
-never_accesskey=a
-never_label=Mai per a aquesta web
-no_accesskey=N
-no_label=No
+disabled = deshabilitat
+dimensions = %Spx × %Spx
+yes_accesskey = S
+yes_label = Sí
+never_accesskey = a
+never_label = Mai per a aquesta web
+no_accesskey = N
+no_label = No
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Resize this image?;Resize these images?
 preview_originalsize = Original dimensions: %Spx × %Spx
+preview_originalfilesize = Original file size: %S
 preview_resized = Resized to: %Spx × %Spx
+preview_resizedfilesize_estimating = Estimating new file size…
+preview_resizedfilesize = Estimated new file size: %S
 preview_notresized = Not resized
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
