--- a/locale/de/shrunked.properties
+++ b/locale/de/shrunked.properties
@@ -1,17 +1,20 @@
-disabled=deaktiviert
-dimensions=%Spx × %Spx
-yes_accesskey=J
-yes_label=Ja
-never_accesskey=i
-never_label=Nie für diese Seite
-no_accesskey=N
-no_label=Nein
+disabled = deaktiviert
+dimensions = %Spx × %Spx
+yes_accesskey = J
+yes_label = Ja
+never_accesskey = i
+never_label = Nie für diese Seite
+no_accesskey = N
+no_label = Nein
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Resize this image?;Resize these images?
 preview_originalsize = Original dimensions: %Spx × %Spx
+preview_originalfilesize = Original file size: %S
 preview_resized = Resized to: %Spx × %Spx
+preview_resizedfilesize_estimating = Estimating new file size…
+preview_resizedfilesize = Estimated new file size: %S
 preview_notresized = Not resized
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
