--- a/locale/fr/shrunked.properties
+++ b/locale/fr/shrunked.properties
@@ -1,17 +1,20 @@
-disabled=désactivé
-dimensions=%S px × %S px
-yes_accesskey=O
-yes_label=Oui
-never_accesskey=J
-never_label=Jamais pour ce site
-no_accesskey=N
-no_label=Non
+disabled = désactivé
+dimensions = %S px × %S px
+yes_accesskey = O
+yes_label = Oui
+never_accesskey = J
+never_label = Jamais pour ce site
+no_accesskey = N
+no_label = Non
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Resize this image?;Resize these images?
 preview_originalsize = Original dimensions: %Spx × %Spx
+preview_originalfilesize = Original file size: %S
 preview_resized = Resized to: %Spx × %Spx
+preview_resizedfilesize_estimating = Estimating new file size…
+preview_resizedfilesize = Estimated new file size: %S
 preview_notresized = Not resized
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
