--- a/locale/hr/shrunked.dtd
+++ b/locale/hr/shrunked.dtd
@@ -30,4 +30,4 @@
 <!ENTITY shrunked-advanced.orient.label "Automatski rotiraj slike">
 <!ENTITY shrunked-advanced.gps.label "Prijenos GPS podataka">
 <!ENTITY shrunked-advanced.logenabled.label "Zapis obavijesti u konzolu grešaka">
-<!ENTITY shrunked-compose.context.label "Promjena veličine ove slike&#x2026;">
+<!ENTITY shrunked-compose.context.label "Promjena veličine ove slike…">
