--- a/locale/hr/shrunked.properties
+++ b/locale/hr/shrunked.properties
@@ -11,7 +11,10 @@ question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Pomjena veličine ove slike?;Pomjena veličine ovih slika?
 preview_originalsize = Izvorna veličina: %Spx × %Spx
+preview_originalfilesize = Original file size: %S
 preview_resized = Promijeniti na: %Spx × %Spx
+preview_resizedfilesize_estimating = Estimating new file size…
+preview_resizedfilesize = Estimated new file size: %S
 preview_notresized = Nije promijenjeno
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
