--- a/locale/it/shrunked.dtd
+++ b/locale/it/shrunked.dtd
@@ -30,4 +30,4 @@
 <!ENTITY shrunked-advanced.orient.label "Ruota le immagini automaticamente">
 <!ENTITY shrunked-advanced.gps.label "Trasferisci i dati GPS">
 <!ENTITY shrunked-advanced.logenabled.label "Log messages to Error Console">
-<!ENTITY shrunked-compose.context.label "Resize this image&#x2026;">
+<!ENTITY shrunked-compose.context.label "Resize this image…">
