--- a/locale/pl/shrunked.dtd
+++ b/locale/pl/shrunked.dtd
@@ -30,4 +30,4 @@
 <!ENTITY shrunked-advanced.orient.label "Automatycznie obracaj obrazki">
 <!ENTITY shrunked-advanced.gps.label "Transferuj dane GPS">
 <!ENTITY shrunked-advanced.logenabled.label "Log messages to Error Console">
-<!ENTITY shrunked-compose.context.label "Resize this image&#x2026;">
+<!ENTITY shrunked-compose.context.label "Resize this image…">
