--- a/locale/pl/shrunked.properties
+++ b/locale/pl/shrunked.properties
@@ -1,17 +1,20 @@
-disabled=wyłączone
-dimensions=%Spx × %Spx
-yes_accesskey=T
-yes_label=Tak
-never_accesskey=W
-never_label=Nigdy dla tej witryny
-no_accesskey=N
-no_label=Nie
+disabled = wyłączone
+dimensions = %Spx × %Spx
+yes_accesskey = T
+yes_label = Tak
+never_accesskey = W
+never_label = Nigdy dla tej witryny
+no_accesskey = N
+no_label = Nie
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Resize this image?;Resize these images?
 preview_originalsize = Original dimensions: %Spx × %Spx
+preview_originalfilesize = Original file size: %S
 preview_resized = Resized to: %Spx × %Spx
+preview_resizedfilesize_estimating = Estimating new file size…
+preview_resizedfilesize = Estimated new file size: %S
 preview_notresized = Not resized
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
