--- a/locale/pt-BR/shrunked.dtd
+++ b/locale/pt-BR/shrunked.dtd
@@ -30,4 +30,4 @@
 <!ENTITY shrunked-advanced.orient.label "Girar imagens automaticamente">
 <!ENTITY shrunked-advanced.gps.label "Transferir dados de GPS">
 <!ENTITY shrunked-advanced.logenabled.label "Log messages to Error Console">
-<!ENTITY shrunked-compose.context.label "Resize this image&#x2026;">
+<!ENTITY shrunked-compose.context.label "Resize this image…">
