--- a/locale/tr/shrunked.properties
+++ b/locale/tr/shrunked.properties
@@ -1,17 +1,20 @@
-disabled=devredışı
-dimensions=%Spx × %Spx
-yes_accesskey=E
-yes_label=Evet
-never_accesskey=a
-never_label=Bu site için asla
-no_accesskey=H
-no_label=Hayır
+disabled = devredışı
+dimensions = %Spx × %Spx
+yes_accesskey = E
+yes_label = Evet
+never_accesskey = a
+never_label = Bu site için asla
+no_accesskey = H
+no_label = Hayır
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Resize this image?;Resize these images?
 preview_originalsize = Original dimensions: %Spx × %Spx
+preview_originalfilesize = Original file size: %S
 preview_resized = Resized to: %Spx × %Spx
+preview_resizedfilesize_estimating = Estimating new file size…
+preview_resizedfilesize = Estimated new file size: %S
 preview_notresized = Not resized
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
