--- a/locale/nl/shrunked.properties
+++ b/locale/nl/shrunked.properties
@@ -1,5 +1,5 @@
 disabled = uitgeschakelds
-dimensions = %Spx × %Spx
+dimensions = %S px × %S px
 yes_accesskey = J
 yes_label = Ja
 never_accesskey = e
@@ -10,12 +10,16 @@ no_label = Nee
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Deze afbeelding verkleinen?;Deze afbeeldingen verkleinen?
-preview_originalsize = Originele afmetingen: %Spx x %Spx
+preview_originalsize = Originele afmetingen: %S px x %S px
 preview_originalfilesize = Original file size: %S
-preview_resized = Verkleind naar: %Spx x %Spx
+preview_resized = Verkleind naar: %S px x %S px
 preview_resizedfilesize_estimating = Estimating new file size…
 preview_resizedfilesize = Estimated new file size: %S
 preview_notresized = Niet verkleind
+unit_bytes = B
+# Localization note: this should match shrunked-unit.kilobytes in shrunked.dtd
+unit_kilobytes = kB
+unit_megabytes = MB
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 status_resizing = Bezig met verkleinen van afbeelding...;Bezig met verkleinen van afbeeldingen...
