--- a/locale/de/shrunked.dtd
+++ b/locale/de/shrunked.dtd
@@ -11,9 +11,9 @@
 <!ENTITY shrunked-options.remembersite.label "Angaben zu dieser Website merken">
 <!ENTITY shrunked-options.savedefault.label "Als Standardeinstellungen speichern">
 <!ENTITY shrunked-noresize.label "Original">
-<!ENTITY shrunked-small.label "500px">
-<!ENTITY shrunked-medium.label "800px">
-<!ENTITY shrunked-large.label "1200px">
+<!ENTITY shrunked-small.label "500 px">
+<!ENTITY shrunked-medium.label "800 px">
+<!ENTITY shrunked-large.label "1200 px">
 <!ENTITY shrunked-custom.label "Benutzerdefiniert">
 <!ENTITY shrunked-width.label "Breite:">
 <!ENTITY shrunked-height.label "Höhe:">
@@ -21,7 +21,8 @@
 <!ENTITY shrunked-preview.previous.tooltip "Previous image">
 <!ENTITY shrunked-preview.next.tooltip "Next image">
 <!ENTITY shrunked-minsize.label "Minimum file size to resize:">
-<!ENTITY shrunked-minsize.kilobytes "KB">
+<!-- Localization note: this should match unit_kilobytes in shrunked.properties -->
+<!ENTITY shrunked-unit.kilobytes "kB">
 <!ENTITY shrunked-maxsize.label "Maximum size for your photos:">
 <!ENTITY shrunked-custom.pixels "px">
 <!ENTITY shrunked-advanced.label "Advanced">
