--- a/locale/hr/shrunked.dtd
+++ b/locale/hr/shrunked.dtd
@@ -11,9 +11,9 @@
 <!ENTITY shrunked-options.remembersite.label "Zapamti moj odgovor za ovu web stranicu">
 <!ENTITY shrunked-options.savedefault.label "Spremi kao zadane postavke">
 <!ENTITY shrunked-noresize.label "Izvornik">
-<!ENTITY shrunked-small.label "500px">
-<!ENTITY shrunked-medium.label "800px">
-<!ENTITY shrunked-large.label "1200px">
+<!ENTITY shrunked-small.label "500 px">
+<!ENTITY shrunked-medium.label "800 px">
+<!ENTITY shrunked-large.label "1200 px">
 <!ENTITY shrunked-custom.label "Prilagođeno">
 <!ENTITY shrunked-width.label "Širina:">
 <!ENTITY shrunked-height.label "Visina:">
@@ -21,7 +21,8 @@
 <!ENTITY shrunked-preview.previous.tooltip "Prethodna slika">
 <!ENTITY shrunked-preview.next.tooltip "Sljedeća slika">
 <!ENTITY shrunked-minsize.label "Minimalna veličina datoteke za promjenu:">
-<!ENTITY shrunked-minsize.kilobytes "KB">
+<!-- Localization note: this should match unit_kilobytes in shrunked.properties -->
+<!ENTITY shrunked-unit.kilobytes "kB">
 <!ENTITY shrunked-maxsize.label "Maksimalna veličina za Vaše fotografije:">
 <!ENTITY shrunked-custom.pixels "px">
 <!ENTITY shrunked-advanced.label "Napredno">
