--- a/locale/nl/shrunked.dtd
+++ b/locale/nl/shrunked.dtd
@@ -11,9 +11,9 @@
 <!ENTITY shrunked-options.remembersite.label "Mijn antwoord voor deze website onthouden">
 <!ENTITY shrunked-options.savedefault.label "Opslaan als standaard instellingen">
 <!ENTITY shrunked-noresize.label "Origineel">
-<!ENTITY shrunked-small.label "500px">
-<!ENTITY shrunked-medium.label "800px">
-<!ENTITY shrunked-large.label "1200px">
+<!ENTITY shrunked-small.label "500 px">
+<!ENTITY shrunked-medium.label "800 px">
+<!ENTITY shrunked-large.label "1200 px">
 <!ENTITY shrunked-custom.label "Aangepast">
 <!ENTITY shrunked-width.label "Breedte:">
 <!ENTITY shrunked-height.label "Hoogte:">
@@ -21,7 +21,8 @@
 <!ENTITY shrunked-preview.previous.tooltip "Vorige afbeelding">
 <!ENTITY shrunked-preview.next.tooltip "Volgende afbeelding">
 <!ENTITY shrunked-minsize.label "Minimale bestandsgrootte om te verkleinen:">
-<!ENTITY shrunked-minsize.kilobytes "KB">
+<!-- Localization note: this should match unit_kilobytes in shrunked.properties -->
+<!ENTITY shrunked-unit.kilobytes "kB">
 <!ENTITY shrunked-maxsize.label "Maximale grootte van uw afbeeldingen:">
 <!ENTITY shrunked-custom.pixels "px">
 <!ENTITY shrunked-advanced.label "Geavanceerd">
