--- a/locale/pl/shrunked.dtd
+++ b/locale/pl/shrunked.dtd
@@ -11,9 +11,9 @@
 <!ENTITY shrunked-options.remembersite.label "Zapamiętaj moją odpowiedź dla tej witryny">
 <!ENTITY shrunked-options.savedefault.label "Zapisz jako ustawienia domyślne">
 <!ENTITY shrunked-noresize.label "Oryginalny">
-<!ENTITY shrunked-small.label "500px">
-<!ENTITY shrunked-medium.label "800px">
-<!ENTITY shrunked-large.label "1200px">
+<!ENTITY shrunked-small.label "500 px">
+<!ENTITY shrunked-medium.label "800 px">
+<!ENTITY shrunked-large.label "1200 px">
 <!ENTITY shrunked-custom.label "Własny">
 <!ENTITY shrunked-width.label "Szerokość:">
 <!ENTITY shrunked-height.label "Wysokość:">
@@ -21,7 +21,8 @@
 <!ENTITY shrunked-preview.previous.tooltip "Previous image">
 <!ENTITY shrunked-preview.next.tooltip "Next image">
 <!ENTITY shrunked-minsize.label "Minimalny rozmiar zmienianego pliku:">
-<!ENTITY shrunked-minsize.kilobytes "KB">
+<!-- Localization note: this should match unit_kilobytes in shrunked.properties -->
+<!ENTITY shrunked-unit.kilobytes "kB">
 <!ENTITY shrunked-maxsize.label "Minimalny rozmiar zdjęć:">
 <!ENTITY shrunked-custom.pixels "px">
 <!ENTITY shrunked-advanced.label "Zaawansowane">
