--- a/locale/sv-SE/shrunked.dtd
+++ b/locale/sv-SE/shrunked.dtd
@@ -11,9 +11,9 @@
 <!ENTITY shrunked-options.remembersite.label "Kom ihåg mitt svar för denna webbplats">
 <!ENTITY shrunked-options.savedefault.label "Spara som standardinställningar">
 <!ENTITY shrunked-noresize.label "Original">
-<!ENTITY shrunked-small.label "500 px">
-<!ENTITY shrunked-medium.label "800 px">
-<!ENTITY shrunked-large.label "1200 px">
+<!ENTITY shrunked-small.label "500 px">
+<!ENTITY shrunked-medium.label "800 px">
+<!ENTITY shrunked-large.label "1200 px">
 <!ENTITY shrunked-custom.label "Anpassad">
 <!ENTITY shrunked-width.label "Bredd:">
 <!ENTITY shrunked-height.label "Höjd:">
@@ -21,7 +21,8 @@
 <!ENTITY shrunked-preview.previous.tooltip "Previous image">
 <!ENTITY shrunked-preview.next.tooltip "Next image">
 <!ENTITY shrunked-minsize.label "Minsta filstorlek att storleksändra:">
-<!ENTITY shrunked-minsize.kilobytes "kB">
+<!-- Localization note: this should match unit_kilobytes in shrunked.properties -->
+<!ENTITY shrunked-unit.kilobytes "kB">
 <!ENTITY shrunked-maxsize.label "Maximistorlek för dina bilder:">
 <!ENTITY shrunked-custom.pixels "px">
 <!ENTITY shrunked-advanced.label "Advanced">
