--- a/locale/tr/shrunked.properties
+++ b/locale/tr/shrunked.properties
@@ -1,5 +1,5 @@
 disabled = devredışı
-dimensions = %Spx × %Spx
+dimensions = %S px × %S px
 yes_accesskey = E
 yes_label = Evet
 never_accesskey = a
@@ -10,12 +10,16 @@ no_label = Hayır
 question_pluralform = 1
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 questions = Resize this image?;Resize these images?
-preview_originalsize = Original dimensions: %Spx × %Spx
+preview_originalsize = Original dimensions: %S px × %S px
 preview_originalfilesize = Original file size: %S
-preview_resized = Resized to: %Spx × %Spx
+preview_resized = Resized to: %S px × %S px
 preview_resizedfilesize_estimating = Estimating new file size…
 preview_resizedfilesize = Estimated new file size: %S
 preview_notresized = Not resized
+unit_bytes = B
+# Localization note: this should match shrunked-unit.kilobytes in shrunked.dtd
+unit_kilobytes = kB
+unit_megabytes = MB
 
 # Localization note: see https://developer.mozilla.org/en-US/docs/Localization_and_Plurals for help here
 status_resizing = Resizing image…;Resizing images…
